# lab-14

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPT_LOG.md  README.md  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml  codeql.yml
arrow-server/: Dockerfile  go.mod  go.sum
arrow-server/internal/: flight.go  flight_test.go  store.go  store_test.go
bench/: README.md
bench/results/: bench_20260527_220942.json
bench/scenarios/: plot_bench.py  run_bench.py  test_bench_plots.py
dashboard/: Dockerfile  pyproject.toml
dashboard/src/dashboard/: __init__.py  app.py  components.py  data.py
dashboard/tests/: test_components.py  test_data.py  test_smoke.py
docs/: architecture.md  kubernetes.md
docs/screenshots/: dashboard-full.png.placeholder  dashboard-gauges.png.placeholder  dashboard-kpi.png.placeholder  k8s-describe-output.txt  (+7 more)
go-collector/: Dockerfile  go.mod  go.sum
k8s/: kind-config.yaml
mock-owm/: Dockerfile  go.mod
prompts/: 00-1-root-files.md  00-2-directories.md  00-3-go-workspace.md  00-4-rust-stub.md  00-5-python-projects.md  00-6-compose-makefile.md  00-7-ci.md  01-1-mock-owm.md  01-2-mock-owm-smoke.md  02-1-config-types.md  02-2-http-client.md  02-3-etcd-shard.md  02-4-window.md  02-5-sink.md  02-6-main.md  03-1-arrow-server.md  03-2-arrow-client-py.md  03-3-arrow-smoke.md  04-1-rust-rules.md  04-2-pyo3-bindings.md  04-3-maturin-tests.md  04-4-validator-integration.md  05-1-consumers.md  05-2-transforms.md  05-3-duckdb.md  05-4-visualizations.md  05-5-pipeline.md  06-1-asyncio-collector.md  06-2-bench-scenario.md  06-3-bench-plots.md  06-4-run-bench.md  06-5-bench-readme.md  07-1-dockerfiles.md  07-2-k8s-base.md  07-3-kustomize-overlays.md  07-4-kind-deploy.md  07-5-makefile-k8s.md  07-6-screenshots.md  08-1-dashboard-data.md  08-2-components.md  (+14 more)
py-analyzer/: Dockerfile  pyproject.toml
py-analyzer/src/analyzer/: __init__.py  analytics.py  arrow_client.py  consumers.py  demo_arrow.py  pipeline.py  transforms.py  validator.py  visualizations.py
py-analyzer/tests/: test_analytics.py  test_arrow_client.py  test_arrow_integration.py  test_consumers.py  test_rust_validator.py  test_smoke.py  test_transforms.py  test_validator_integration.py  test_visualizations.py
py-asyncio-collector/: pyproject.toml
py-asyncio-collector/src/collector/: __init__.py  __main__.py  config.py  fetcher.py
py-asyncio-collector/tests/: test_fetcher.py  test_smoke.py
rust-validator/: .gitignore  Cargo.toml
(+44 files in other folders)
