[project]
name = "weather-dashboard"
version = "0.0.0"
description = "Streamlit dashboard for weather pipeline"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "plotly",
    "pyarrow",
    "polars",
    "kafka-python",
    "nats-py",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["RUF002", "RUF003"]  # Cyrillic in docstrings/comments is intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
