[project]
name = "weather-analyzer"
version = "0.0.0"
description = "Polars + DuckDB analyzer for weather pipeline"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "duckdb",
    "pyarrow",
    "kafka-python",
    "nats-py",
    "plotly",
    "matplotlib",
    "altair>=5",
    "pydantic",
    "typer",
    "rich",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "hypothesis",
    "maturin>=1.7,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires running services"]
